# B3-21

./: .clang-tidy  CMakeLists.txt  README.md  backup.hpp  calc_exec.hpp  for_society.hpp  main.cpp  memory.hpp  number.hpp
Backup/: backup.hpp
CalcExec/: calc_exec.cpp  calc_exec.hpp  calc_operations.cpp
ForSociety/: for_society.cpp  for_society.hpp
Memory/: memory.hpp
Number/: number.hpp
Program/: program.cpp  program.hpp
backend/backup/: backup.cpp  backup.hpp
backend/calc_exec/: calc_exec.cpp  calc_exec.hpp  calc_math.cpp  calc_math.hpp  calc_operations.cpp
backend/for_society/: for_society.cpp  for_society.hpp
backend/message_queue/: message_queue.cpp  message_queue.hpp
backend/number/: number.cpp  number.hpp
backend/number_buffer/: number_buffer.cpp  number_buffer.hpp
backend/program_buffer_exec/: program.cpp  program.hpp
frontend/: test.cpp
frontend/interface/: connect.hpp  connection.cpp  interface_def.cpp  interface_def.hpp
frontend/interface/definition/: interface_def.cpp  interface_def.hpp
frontend/interface/frame/: connection.cpp  frame.cpp  frame.hpp
frontend/visualization/: updater.cpp  updater.hpp  visualization.hpp  visualization_class.cpp
